--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -23,17 +23,17 @@
     damageCoefficient: 0.90
 
 #Alternate / slim basic armor vest
-- type: entity
-  parent: ClothingOuterArmorBasic
-  id: ClothingOuterArmorBasicSlim
-  name: armor vest
-  suffix: slim
-  description: A slim Type I armored vest that provides decent protection against most types of damage.
-  components:
-  - type: Sprite
-    sprite: GreyStation/Clothing/OuterClothing/Armor/security_slim.rsi # GreyStation - Resprite
-  - type: Clothing
-    sprite: GreyStation/Clothing/OuterClothing/Armor/security_slim.rsi # GreyStation - Resprite
+#- type: entity # GreyStation - Removed bloat
+#  parent: ClothingOuterArmorBasic
+#  id: ClothingOuterArmorBasicSlim
+#  name: armor vest
+#  suffix: slim
+#  description: A slim Type I armored vest that provides decent protection against most types of damage.
+#  components:
+#  - type: Sprite
+#    sprite: Clothing/OuterClothing/Armor/security_slim.rsi
+#  - type: Clothing
+#    sprite: Clothing/OuterClothing/Armor/security_slim.rsi # GreyStation - Resprite
 
 - type: entity
   parent: [ClothingOuterBaseLarge, AllowSuitStorageClothing, BaseRestrictedContraband]
